# QJsonify

./: .gitignore  CMakeLists.txt  QJsonify.pro  README.md  about.cpp  about.ui  loadmenu.cpp  loadmenu.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu_defs.json
icons/: qjsonify.icns
lib/cocoainitializer/: CMakeLists.txt
lib/qmenugen/: CMakeLists.txt  loadmenu.cpp  loadmenu.h
